Made changes to the title of the website. I also made corrections to the <select> so each anchor title appears once on the you hit the Go button. Also add padding to the <select> so the title seem center on smaller devices.

--- a/css/base.css
+++ b/css/base.css
@@ -216,9 +216,7 @@ input[type="checkbox"] {
 }
 
 select {
-  padding: 6px;
-  height: 32px;
- 
+  height: 32px; 
 }
 
 .button {
@@ -302,6 +300,19 @@ button {
     margin-bottom: 10px;
     cursor: pointer;
 }
-
+select {
+    display: inline-block;
+	line-height: 30px;
+	padding: 0 128px;
+	width: 100%;
+    color: #FFF;
+    background-color:#FF8FA3;
+    font-family: cursive;
+    border-radius: 5px;
+    border: 2px solid #fff;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    cursor: pointer
+}
 
 
